--- a/app/app.html
+++ b/app/app.html
@@ -7,7 +7,7 @@
       </div>
       <div class="avatar-info">
         <h5>Marty McFly</h5>
-        <p>View Profile</p>
+        <p (click)="toProfile()">View Profile</p>
       </div>
     </div>
   </ion-toolbar>
