--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -8,7 +8,7 @@
 
 	  <ion-item class="custom-input">
 	    <ion-label floating>Username</ion-label>
-	    <ion-input type="text"></ion-input>
+	    <ion-input type="email"></ion-input>
 	  </ion-item>
 
 	  <ion-item class="custom-input">
@@ -18,15 +18,15 @@
 	  <ion-grid>
 		  <ion-row>
 		    <ion-col width-50></ion-col>
-		    <ion-col class="text-right" width-50><a class="forgot">Forgot Password?</a></ion-col>
+		    <ion-col class="text-right" width-50><a class="forgot" (click)="toForgotPassword()">Forgot Password?</a></ion-col>
 		  </ion-row>
 	  </ion-grid>
 	  <div class="pd10">
-		  <button block class="primary-background">
+		  <button block class="primary-background" (click)="toBlog()">
 		  	Login
 		  </button>
 	  </div>
-	  <p class="sign-up">Don't have an account? <a>Sign Up</a></p>
+	  <p class="sign-up" (click)="toSignUp();">Don't have an account? <a>Sign Up</a></p>
 
 	</ion-list>
 </ion-content>
