--- a/app/pages/blog-details/blog-details.html
+++ b/app/pages/blog-details/blog-details.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-  <div class="blog-detail animated fadeInUp" *ngIf="blogDetail.ID">
+  <div class="blog-detail" *ngIf="blogDetail.ID">
     <div class="login-curve pic-holder mb0">
       <div class="author-detail">
         <img class="author-pic" src="{{blogDetail.author.avatar_URL}}" alt="">
