--- a/app/pages/gallery-detail/gallery-detail.html
+++ b/app/pages/gallery-detail/gallery-detail.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-  <div class="gallery-detail animated fadeInUp">
+  <div class="gallery-detail">
     <div class="login-curve pic-holder mb0">
       <div class="gallery-name-holder">
         <h4 class="gallery-name">{{galleryName}}</h4>
