--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -1,6 +1,7 @@
 <ion-content>
   <div class="login-toolbar">
     <div class="login-curve">
+			<ion-title>Login</ion-title>
     </div>
   </div>
 
