--- a/app/pages/forgot-password/forgot-password.html
+++ b/app/pages/forgot-password/forgot-password.html
@@ -1,21 +1,22 @@
 <ion-content>
-  <div class="login-toolbar">
-    <div class="login-curve">
-    </div>
-  </div>
+	<div class="login-toolbar">
+		<div class="login-curve">
+			<ion-title>Forgot Password</ion-title>
+		</div>
+	</div>
 
 	<ion-list no-lines class="login-form">
 
-	  <ion-item class="custom-input">
-	    <ion-label floating>Email Id</ion-label>
-	    <ion-input type="email"></ion-input>
-	  </ion-item>
-	  <div class="pd10">
-		  <button block class="primary-background" (click)="showAlert()">
+		<ion-item class="custom-input">
+			<ion-label floating>Email Id</ion-label>
+			<ion-input type="email"></ion-input>
+		</ion-item>
+		<div class="pd10">
+			<button block class="primary-background" (click)="showAlert()">
 		  	Submit
 		  </button>
-	  </div>
-	  <p class="sign-up" (click)="toLogIn();">Remember your password? <a>Log In</a></p>
+		</div>
+		<p class="sign-up" (click)="toLogIn();">Remember your password? <a>Log In</a></p>
 
 	</ion-list>
 </ion-content>
