--- a/app/pages/blog-details/blog-details.html
+++ b/app/pages/blog-details/blog-details.html
@@ -15,7 +15,7 @@
 
     <ion-card>
       <ion-card-content class="pd0">
-        <p class="blog-date">{{blogDetail.date | date:'MMM d, y h:mm a'}}</p>
+        <p class="blog-date">{{blogDetail.date | date:'MMM d, y'}}</p>
         <div class="blog-detail-title">
           <span [innerHTML]="blogDetail.title"></span>
         </div>
